# Boom

./: index.html  package.json  pnpm-lock.yaml  vitest.config.ts
sample/: 成武江河高级中学成绩汇总.xls  监考员名单.xlsx  高中部教师名单.xls
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  zhunkaozhengTemplate.html
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  class_config.rs  exam_allocation.rs  exam_plan.rs  exam_staff.rs  export_bundle.rs  export_invigilation.rs  invigilation.rs  lib.rs  main.rs  schema.rs  schema.sql  score.rs  teacher.rs
src/app/: App.vue
src/app/router/: index.ts
src/entities/class-config/: model.ts
src/entities/exam-plan/: model.ts
src/entities/score/: model.ts
src/entities/teacher/: model.ts
src/features/classes/: service.ts  store.ts
src/features/classes/__tests__/: classStore.spec.ts
src/features/dashboard/: service.ts  store.ts
src/features/invigilation/: service.ts
src/features/monitor-draw/: model.ts
src/features/scores/: service.ts  store.ts
src/features/teachers/: service.ts  store.ts
src/pages/dashboard/: DashboardPage.vue
src/pages/management/: ManagementPage.vue
src/shared/styles/: base.css  index.css  tokens.css
src/shared/theme/: theme.ts
src/shared/types/: api.ts
src/shared/utils/: appLog.ts
src/widgets/common/: ConfigCard.vue  FilterToolbar.vue  FluentSelect.vue  InfoHint.vue  TableCard.vue
src/widgets/layout/: AppShell.vue  PrimaryRail.vue  SecondaryNav.vue  TopHeader.vue  WindowTitleBar.vue  types.ts
ui/: pencil-new.pen  pencil-ui-spec.md
(+10 files in other folders)
