[package]
name = "academic-administration-system"
version = "0.1.0"
description = "Boom desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "academic_administration_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.31"
rusqlite = { version = "0.37", features = ["bundled"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.92"
zip = "4.6.1"
cp_sat = { path = "third_party/cp_sat" }
